removing gap between hero and content; fixing alignment of main nav dropdown menu

--- a/assets/scss/components/stencil/navPages/_navPages.scss
+++ b/assets/scss/components/stencil/navPages/_navPages.scss
@@ -291,7 +291,7 @@
     @include breakpoint("large") {
         color: stencilColor("navPages-color");
         display: inline-block;
-        padding: spacing("half") (spacing("half") + spacing("quarter"));
+        padding: 20px (spacing("half") + spacing("quarter"));
 
         &.is-open {
             background-color: $navPage-subMenu-item--is-highlighted-background;
