--- a/assets/scss/layouts/header/_header.scss
+++ b/assets/scss/layouts/header/_header.scss
@@ -42,7 +42,7 @@
     z-index: zIndex("higher");
 
     @include breakpoint("large") {
-        border-bottom: container("border");
+        border-bottom: none;
         display: flex;
         flex-direction: column;
         height: auto;
